fixed bugs and code smells
